<resources>
    <string name="app_name">PokeApp - Mahmud</string>
    <string name="home">Home</string>
    <string name="scales">Compare</string>
    <string name="retry">Retry</string>

    <string name="no_internet_connection">No internet connection</string>
    <string name="fetch_data_pokemon_list_error">Failed to load pokemon data</string>
    <string name="no_internet_connection_message">Failed to load data pokemon from service, please check your internet connection then try again</string>
    <string name="pokemon_bottom_sheet_title">Choose Pokemon</string>

    <string name="placeholder_image">placeholder image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="back">Back</string>
    <string name="pokemon_statistic">Statistic</string>
    <string name="information">Information</string>
    <string name="abilities">Abilities</string>
    <string name="select_pokemon">Select Pokemon</string>
    <string name="select_pokemon_instruction">Click to select or change pokemon character</string>
    <string name="pokemon_1">Pokemon 1</string>
    <string name="pokemon_2">Pokemon 2</string>
    <string name="pokemon_already_selected">The character item should be deference, please select another character</string>
    <string name="character">Character</string>
    <string name="compare_result">Compare Result</string>
    <string name="comparation_message">Want to get result of the comparation between character.?, Please Select Two Pokemon to get score</string>
</resources>