<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="?colorOnBackground"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:paddingBottom="30dp">

    <ImageView
        android:id="@+id/error_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="?colorOnBackground"
        android:contentDescription="@string/placeholder_image"
        app:srcCompat="@drawable/error" />

    <TextView
        android:id="@+id/error_title"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_internet_connection"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/error_msg"
        style="@style/TextNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_internet_connection_message"
        android:textAlignment="center" />
</LinearLayout>